// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationControls renders with a tutorial and a step 1`] = `
<div>
  <div
    class="kgt-nav-controls"
  >
    <button
      class="pf-c-button pf-m-link"
      data-kgt-prev="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            transform=""
          />
        </svg>
      </span>
    </button>
    <div
      class="kgt-nav-controls__bullets"
    >
      <div
        class="kgt-nav-controls__bullet "
      >
          
      </div>
      <div
        class="kgt-nav-controls__bullet "
      >
          
      </div>
      <div
        class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
      >
          
      </div>
    </div>
    <button
      class="pf-c-button pf-m-link"
      data-kgt-next="true"
      disabled=""
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            transform=""
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`NavigationControls renders with buttons when navigator is enabled 1`] = `
<div>
  <div
    class="kgt-nav-controls"
  >
    <button
      class="pf-c-button pf-m-link"
      data-kgt-prev="true"
      disabled=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            transform=""
          />
        </svg>
      </span>
    </button>
    <div
      class="kgt-nav-controls__bullets"
    >
      <div
        class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
      >
          
      </div>
    </div>
    <button
      class="pf-c-button pf-m-link"
      data-kgt-next="true"
      disabled=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            transform=""
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`NavigationControls renders without a tutorial and without a step 1`] = `
<div>
  <div
    class="kgt-nav-controls"
  >
    <button
      class="pf-c-button pf-m-link"
      data-kgt-prev="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            transform=""
          />
        </svg>
      </span>
    </button>
    <div
      class="kgt-nav-controls__bullets"
    />
    <button
      class="pf-c-button pf-m-link"
      data-kgt-next="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            transform=""
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`NavigationControls renders without a tutorial, but with a step 1`] = `
<div>
  <div
    class="kgt-nav-controls"
  >
    <button
      class="pf-c-button pf-m-link"
      data-kgt-prev="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            transform=""
          />
        </svg>
      </span>
    </button>
    <div
      class="kgt-nav-controls__bullets"
    />
    <button
      class="pf-c-button pf-m-link"
      data-kgt-next="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            transform=""
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`NavigationControls works when users go to the next step 1`] = `
<div>
  <div
    class="kgt-nav-controls"
  >
    <button
      class="pf-c-button pf-m-link"
      data-kgt-prev="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            transform=""
          />
        </svg>
      </span>
    </button>
    <div
      class="kgt-nav-controls__bullets"
    >
      <div
        class="kgt-nav-controls__bullet "
      >
          
      </div>
      <div
        class="kgt-nav-controls__bullet "
      >
          
      </div>
      <div
        class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
      >
          
      </div>
      <div
        class="kgt-nav-controls__bullet "
      >
          
      </div>
    </div>
    <button
      class="pf-c-button pf-m-link"
      data-kgt-next="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            transform=""
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`NavigationControls works when users go to the previous step 1`] = `
<div>
  <div
    class="kgt-nav-controls"
  >
    <button
      class="pf-c-button pf-m-link"
      data-kgt-prev="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            transform=""
          />
        </svg>
      </span>
    </button>
    <div
      class="kgt-nav-controls__bullets"
    >
      <div
        class="kgt-nav-controls__bullet "
      >
          
      </div>
      <div
        class="kgt-nav-controls__bullet "
      >
          
      </div>
      <div
        class="kgt-nav-controls__bullet kgt-nav-controls__bullet--current"
      >
          
      </div>
      <div
        class="kgt-nav-controls__bullet "
      >
          
      </div>
    </div>
    <button
      class="pf-c-button pf-m-link"
      data-kgt-next="true"
      hidden=""
      type="button"
    >
      <span
        class="pf-c-button__text"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            transform=""
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
